order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"order-database"},{"apiVersion":"apps/v1","kind":"Deployment","name":"order"}]'
  labels:
    app: order
    app.kubernetes.io/component: order
    app.kubernetes.io/instance: order
    app.kubernetes.io/part-of: order
    app.openshift.io/runtime: quarkus
  name: order
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/part-of: order
      app.openshift.io/runtime: quarkus
      deployment: order
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: order
        app.openshift.io/runtime: quarkus
        deployment: order
    spec:
      containers:
      - env:
        - name: MP_MESSAGING_INCOMING_ORDERS_BOOTSTRAP_SERVERS
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.orders.bootstrap.servers
              name: order
        - name: MP_MESSAGING_INCOMING_ORDERS_GROUP_ID
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.orders.group.id
              name: order
        - name: MP_MESSAGING_INCOMING_PAYMENTS_BOOTSTRAP_SERVERS
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.payments.bootstrap.servers
              name: order
        - name: MP_MESSAGING_INCOMING_PAYMENTS_GROUP_ID
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.payments.group.id
              name: order
        - name: QUARKUS_MONGODB_CONNECTION_STRING
          valueFrom:
            secretKeyRef:
              key: quarkus.mongodb.connection-string
              name: order
        - name: MP_MESSAGING_INCOMING_PAYMENTS_TOPIC
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.payments.topic
              name: order
        - name: MP_MESSAGING_INCOMING_ORDERS_TOPIC
          valueFrom:
            secretKeyRef:
              key: mp.messaging.incoming.orders.topic
              name: order
        image: image-registry.openshift-image-registry.svc:5000/wkosp-coolstore/order@sha256:267298b1808abb8c029dd3070c6e0483e4b44ed70e3430e9902fe100bf08c8ea
        imagePullPolicy: IfNotPresent
        name: order
        ports:
        - containerPort: 8778
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
